--- a/index.html
+++ b/index.html
@@ -24,13 +24,25 @@
 </head>
 <body>
   <h1>Daily Forecast</h1>
-  <div class="date">Forecast for <span id="date"></span></div>
-  <img src="latest.png" alt="Latest Forecast" />
+  <div class="date">Forecast for <span id="date"></span> UTC</div>
+  <img id="forecast-img" src="" alt="Latest Forecast" />
 
+  <!-- Load metadata -->
+  <script src="meta.js"></script>
   <script>
-    // Show today's date
-    const today = new Date().toISOString().split('T')[0];
-    document.getElementById("date").textContent = today;
+    // Update date and image dynamically
+    const imgEl = document.getElementById("forecast-img");
+    const dateEl = document.getElementById("date");
+
+    if (typeof forecastMeta !== 'undefined') {
+      const { date, cycle } = forecastMeta;
+      const filename = `${date}_${cycle}.png`;
+      imgEl.src = filename;
+      dateEl.textContent = `${date} ${cycle}`;
+    } else {
+      dateEl.textContent = "Unknown";
+      imgEl.alt = "Forecast image not available";
+    }
   </script>
 </body>
 </html>
